--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 										<img src="./img/product09.png" alt="">
 									</div>
 									<div class="product-body">
-										<p class="product-category">Костюмы для котейки</p>
+										<p class="product-category">Костюм</p>
 										<h3 class="product-name"><a href="#">Китай</a></h3>
 										<h4 class="product-price">2000.00 ₽ <del class="product-old-price">2500.00 ₽</del></h4>
 									</div>
