--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 			<div id="top-header">
 				<div class="container">
 					<ul class="header-links pull-left">
-						<li><a href="#"><i class="fa fa-phone"></i> +7 800 555-35-35</a></li>
-						<li><a href="#"><i class="fa fa-envelope-o"></i> meow@mail.com</a></li>
-						<li><a href="#"><i class="fa fa-map-marker"></i> г. Ростов-на-Дону, ул. Садовая 3/6</a></li>
+						<li><a href="#"><i class="fa fa-phone"></i> +7</a></li>
+						<li><a href="#"><i class="fa fa-envelope-o"></i> meow</a></li>
+						<li><a href="#"><i class="fa fa-map-marker"></i> г. Ростов</a></li>
 					</ul>
 					<ul class="header-links pull-right">
-						<li><a href="#"><i class="fa fa-user-o"></i> Личный кабинет</a></li>
+						<li><a href="#"><i class="fa fa-user-o"></i> кабинет</a></li>
 					</ul>
 				</div>
 			</div>
