--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 			<div id="top-header">
 				<div class="container">
 					<ul class="header-links pull-left">
-						<li><a href="#"><i class="fa fa-phone"></i> +7</a></li>
-						<li><a href="#"><i class="fa fa-envelope-o"></i> meow</a></li>
-						<li><a href="#"><i class="fa fa-map-marker"></i> г. Ростов</a></li>
+						<li><a href="#"><i class="fa fa-phone"></i>35</a></li>
+						<li><a href="#"><i class="fa fa-envelope-o"></i>com</a></li>
+						<li><a href="#"><i class="fa fa-map-marker"></i>ул. Садовая</a></li>
 					</ul>
 					<ul class="header-links pull-right">
-						<li><a href="#"><i class="fa fa-user-o"></i> кабинет</a></li>
+						<li><a href="#"><i class="fa fa-user-o"></i> Личный кабинет</a></li>
 					</ul>
 				</div>
 			</div>
@@ -352,7 +352,7 @@
 										<img src="./img/product09.png" alt="">
 									</div>
 									<div class="product-body">
-										<p class="product-category">Костюм</p>
+										<p class="product-category">Костюмы для котейки</p>
 										<h3 class="product-name"><a href="#">Китай</a></h3>
 										<h4 class="product-price">2000.00 ₽ <del class="product-old-price">2500.00 ₽</del></h4>
 									</div>
